fix: restructure functions and fix webhook

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,29 +1,18 @@
-# Cloudflare Pages Configuration
-# This file configures bindings and settings for Cloudflare Pages deployment
-
 name = "audio-transcription-system"
 compatibility_date = "2024-01-01"
 
-# Pages configuration
-pages_build_output_dir = "frontend/dist"
+# ✅ PENTING: Pages config
+[build]
+command = "cd frontend && npm run build"
+publish = "frontend/dist"
 
-# D1 Database binding
-# Replace database_id with your actual D1 database ID from:
-# npx wrangler d1 create transcriptions-db
+# Database binding
 [[d1_databases]]
 binding = "DB"
 database_name = "transcriptions-db"
-database_id = "YOUR_DATABASE_ID_HERE"  # <-- REPLACE THIS!
+database_id = "0050cab1-e629-4428-abe3-cb9784040e5e"  # Ganti dengan ID Anda
 
-# R2 Bucket binding
+# R2 binding
 [[r2_buckets]]
 binding = "R2"
 bucket_name = "transcriptions"
-
-# Advanced settings (optional)
-[build]
-command = "cd frontend && npm install && npm run build"
-
-# Compatibility flags
-[compatibility_flags]
-# Enable modern JavaScript features
