--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run copy-functions",
+    "copy-functions": "cp -r functions dist/",
     "preview": "vite preview"
   },
   "dependencies": {
