--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && npm run copy-functions",
-    "copy-functions": "cp -r functions dist/",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,7 +19,7 @@
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "typescript": "^5.9.3",
+    "typescript": "^5.6.3",
     "vite": "^5.4.21"
   },
   "description": "",
