--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev:frontend": "cd frontend && npm run dev",
-    "dev:backend": "npx wrangler pages dev frontend/dist --local --port 8788 --binding DB=transcriptions-db",
     "build": "cd frontend && npm run build",
-    "deploy": "cd frontend && npm run build && npx wrangler pages deploy dist",
-    "db:create": "npx wrangler d1 create transcriptions-db",
-    "db:migrate": "npx wrangler d1 execute transcriptions-db --file=database/schema.sql",
-    "db:migrate:local": "npx wrangler d1 execute transcriptions-db --local --file=database/schema.sql"
+    "deploy": "npm run build && npx wrangler pages deploy frontend/dist"
   },
   "devDependencies": {
     "wrangler": "^4.61.0"
