--- a/.github/workflows/transcription.yml
+++ b/.github/workflows/transcription.yml
@@ -1,40 +1,11 @@
-name: Transcription Job Processor
+- name: Install Kaggle CLI
+        run: pip install kaggle
 
-on:
-  repository_dispatch:
-    types: [transcription_job]
-
-jobs:
-  process-transcription:
-    runs-on: ubuntu-latest
-    timeout-minutes: 45
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      
-      - name: Install dependencies
-        run: |
-          pip install requests
-      
-      - name: Extract job parameters
-        id: params
-        run: |
-          echo "job_id=${{ github.event.client_payload.job_id }}" >> $GITHUB_OUTPUT
-          echo "video_url=${{ github.event.client_payload.video_url }}" >> $GITHUB_OUTPUT
-          echo "model_size=${{ github.event.client_payload.model_size }}" >> $GITHUB_OUTPUT
-          echo "language=${{ github.event.client_payload.language }}" >> $GITHUB_OUTPUT
-          echo "webhook_url=${{ github.event.client_payload.webhook_url }}" >> $GITHUB_OUTPUT
-      
-      - name: Trigger Kaggle Notebook
+      - name: Prepare and Push to Kaggle
         env:
           KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
           KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
+          # Kita ambil payload dari webhook frontend
           JOB_ID: ${{ github.event.client_payload.job_id }}
           VIDEO_URL: ${{ github.event.client_payload.video_url }}
           MODEL_SIZE: ${{ github.event.client_payload.model_size }}
@@ -46,130 +17,41 @@ jobs:
           R2_SECRET_KEY: ${{ secrets.R2_SECRET_KEY }}
           R2_BUCKET: ${{ secrets.R2_BUCKET }}
         run: |
-          python3 << 'EOF'
-          import os
-          import json
-          import time
-          import base64
-          import requests
-          from pathlib import Path
-
-          # 1. Read Notebook Content
-          notebook_path = Path('kaggle/transcription_notebook.py')
-          with open(notebook_path, 'r') as f:
-              notebook_code = f.read()
-
-          # 2. Prepare Kernel Identity
-          # Kaggle butuh 'slug' untuk identifikasi unik URL kernel
-          job_short_id = os.environ['JOB_ID'][:8]
-          kernel_slug = f"audio-transcription-{job_short_id}"
-          kernel_title = f"Transcription Job {job_short_id}"
+          # 1. Buat folder kerja
+          mkdir -p transcription_build
           
-          # 3. Construct Payload (FIXED: Added slug & title)
-          payload = {
-              "slug": kernel_slug,       # <--- INI YANG HILANG SEBELUMNYA
-              "title": kernel_title,     # <--- INI JUGA HILANG
-              "text": notebook_code,
-              "language": "python",
-              "kernel_type": "script",
-              "is_private": True,
-              "enable_gpu": True,
-              "enable_internet": True,
-              "dataset_sources": [],
-              "kernel_sources": [],
-              "environment_variables": {
-                  "JOB_ID": os.environ["JOB_ID"],
-                  "VIDEO_URL": os.environ["VIDEO_URL"],
-                  "MODEL_SIZE": os.environ["MODEL_SIZE"],
-                  "LANGUAGE": os.environ["LANGUAGE"],
-                  "WEBHOOK_URL": os.environ["WEBHOOK_URL"],
-                  "WEBHOOK_SECRET": os.environ["WEBHOOK_SECRET"],
-                  "R2_ENDPOINT": os.environ["R2_ENDPOINT"],
-                  "R2_ACCESS_KEY": os.environ["R2_ACCESS_KEY"],
-                  "R2_SECRET_KEY": os.environ["R2_SECRET_KEY"],
-                  "R2_BUCKET": os.environ["R2_BUCKET"]
-              }
+          # 2. Copy script "Otak" ke folder kerja sebagai notebook.py
+          cp kaggle/transcription_notebook.py transcription_build/notebook.py
+          
+          # 3. Masuk ke folder
+          cd transcription_build
+          
+          # 4. Buat metadata kernel secara dinamis (ID wajib: username/slug)
+          # Kita ambil 8 karakter pertama JOB_ID agar slug tidak kepanjangan
+          SHORT_ID=$(echo $JOB_ID | cut -c1-8)
+          KERNEL_SLUG="audio-transcription-${SHORT_ID}"
+          
+          echo "Generating metadata for: ${KAGGLE_USERNAME}/${KERNEL_SLUG}"
+          
+          # Buat file kernel-metadata.json yang WAJIB ada untuk CLI
+          cat > kernel-metadata.json <<EOF
+          {
+            "id": "${KAGGLE_USERNAME}/${KERNEL_SLUG}",
+            "title": "Job ${SHORT_ID}",
+            "code_file": "notebook.py",
+            "language": "python",
+            "kernel_type": "script",
+            "is_private": true,
+            "enable_gpu": true,
+            "enable_internet": true,
+            "dataset_sources": [],
+            "kernel_sources": [],
+            "kernel_data_sources": []
           }
-
-          # 4. Prepare Auth
-          kaggle_username = os.environ["KAGGLE_USERNAME"]
-          kaggle_key = os.environ["KAGGLE_KEY"]
-          auth = base64.b64encode(f"{kaggle_username}:{kaggle_key}".encode()).decode()
-
-          # 5. Send Request
-          print(f"🚀 Triggering Kaggle kernel: {kernel_slug}")
-          
-          response = requests.post(
-              "https://www.kaggle.com/api/v1/kernels/push",
-              headers={
-                  "Authorization": f"Basic {auth}",
-                  "Content-Type": "application/json"
-              },
-              json=payload,
-              timeout=60
-          )
-
-          if response.status_code == 200:
-              result = response.json()
-              print(f"✅ Kaggle kernel triggered successfully")
-              print(f"   Kernel URL: {result.get('url', 'N/A')}")
-          else:
-              print(f"❌ Failed to trigger Kaggle kernel")
-              print(f"   Status: {response.status_code}")
-              print(f"   Response: {response.text}")
-              exit(1)
           EOF
-      
-      - name: Job Summary
-        run: |
-          echo "## Transcription Job Triggered 🎤" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Job ID:** \`${{ steps.params.outputs.job_id }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "**Model:** ${{ steps.params.outputs.model_size }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Language:** ${{ steps.params.outputs.language }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Kaggle notebook is now processing the video. Results will be sent to webhook when complete." >> $GITHUB_STEP_SUMMARY
-      
-      - name: Notify on failure
-        if: failure()
-        env:
-          JOB_ID: ${{ steps.params.outputs.job_id }}
-          WEBHOOK_URL: ${{ steps.params.outputs.webhook_url }}
-          WEBHOOK_SECRET: ${{ secrets.WEBHOOK_SECRET }}
-        run: |
-          python3 << 'EOF'
-          import os
-          import json
-          import hmac
-          import hashlib
-          import requests
           
-          payload = {
-              "job_id": os.environ["JOB_ID"],
-              "status": "failed",
-              "error_code": "PROCESSING_TIMEOUT",
-              "error_message": "GitHub Actions workflow failed",
-              "processing_time": 0
-          }
+          # 5. Push menggunakan Official CLI
+          # CLI akan otomatis membaca environment variables KAGGLE_USERNAME & KAGGLE_KEY
+          kaggle kernels push
           
-          payload_json = json.dumps(payload)
-          signature = hmac.new(
-              os.environ["WEBHOOK_SECRET"].encode(),
-              payload_json.encode(),
-              hashlib.sha256
-          ).hexdigest()
-          
-          try:
-              requests.post(
-                  os.environ["WEBHOOK_URL"],
-                  data=payload_json,
-                  headers={
-                      'Content-Type': 'application/json',
-                      'X-Webhook-Signature': signature
-                  },
-                  timeout=30
-              )
-              print("✅ Failure webhook sent")
-          except Exception as e:
-              print(f"❌ Failed to send webhook: {e}")
-          EOF
+          echo "✅ Push command executed. Check Kaggle Dashboard."
