--- a/.github/workflows/transcription.yml
+++ b/.github/workflows/transcription.yml
@@ -1,10 +1,29 @@
-- name: Install Kaggle CLI
+name: Audio Transcription Workflow
+
+on:
+  repository_dispatch:
+    types: [transcription_job]
+
+jobs:
+  trigger-kaggle:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install Kaggle CLI
         run: pip install kaggle
 
       - name: Prepare and Push to Kaggle
         env:
           KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
           KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
+          # Mengambil data dari payload webhook frontend
           JOB_ID: ${{ github.event.client_payload.job_id }}
           VIDEO_URL: ${{ github.event.client_payload.video_url }}
           MODEL_SIZE: ${{ github.event.client_payload.model_size }}
@@ -16,16 +35,21 @@
           R2_SECRET_KEY: ${{ secrets.R2_SECRET_KEY }}
           R2_BUCKET: ${{ secrets.R2_BUCKET }}
         run: |
+          # 1. Siapkan Folder Kerja
           mkdir -p transcription_build
+          # Copy "Surat" (script python) ke dalam folder amplop
           cp kaggle/transcription_notebook.py transcription_build/notebook.py
           cd transcription_build
           
+          # 2. Buat "Label Alamat" (Metadata) menggunakan Python agar aman dari error syntax
           python3 -c '
           import os, json
           
+          # Ambil variabel
           job_id = os.environ.get("JOB_ID", "test-job")
           username = os.environ.get("KAGGLE_USERNAME")
           
+          # Buat slug pendek (wajib unik)
           short_id = job_id[:8]
           slug = f"audio-transcription-{short_id}"
           title = f"Transcription Job {short_id}"
@@ -50,6 +74,7 @@
               json.dump(metadata, f, indent=2)
           '
           
+          # 3. Kirim Paket menggunakan Kurir Resmi (Kaggle CLI)
           kaggle kernels push
           
           echo "✅ Push command executed successfully!"
