--- a/.gitignore
+++ b/.gitignore
@@ -13,15 +13,18 @@ frontend/dist
 
 # Env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
 .dev.vars
 
 # Logs
+output_log/
 npm-debug.log*
 yarn-debug.log*
+
+# Build artifacts
+transcription_build/
+
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
